style.css
html {
  background-color: #000;
  color: #fff;
  font-family: "IBM Plex Sans Thai Looped", sans-serif;
  cursor: default;
  user-select: none;
}

:root {
  --grayButton: #a0a0a0;
  --blackButton: #313131;
  --orangeButton: #f69a06;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.phone{
  margin-top: 1rem;
  width: 400px;
  height: 700px;
  border: 1px solid black;
  border-radius: 20px;
  box-shadow: 5px 5px 15px 5px #ff8080, -5px 5px 15px 5px #ffe488;
  border: 1px solid rgba(255, 255, 255, 0.5)  
}
.topBar {
  display: flex;
  margin: 1rem;
}
.clock {
  padding-top: 10px;
  font-size: 1rem;
  font-weight: bold;
}

.icons{
  padding: 10px;
  margin-left: auto;
}

.outputDisplay {
  display: flex;
  text-align: right;
  font-size: 5rem;
  padding-top: 2rem;
  margin: 0 1rem;
  cursor: text;
  height: 132px;
  align-items: flex-end;
  justify-content: flex-end;
}

.small {
  font-size: 3rem;
  line-height: 100px;
}

.buttons {
  display: grid;  
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  gap: 1rem;
  justify-items: center;
  margin: 0 1rem;
}

.button{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #fff;
  border-radius: 50px;
  width: 70px;
  height: 70px;
  font-size: 2rem;
  cursor: pointer;
  
}

.button:hover{
  opacity: .8;
}

.gray{
  background-color: var(--grayButton);
}

.orange {
  background-color: var(--orangeButton);
}

.black {
  background-color: var(--blackButton);
}

.zero {
  grid-column: 1 / span 2;
  width: 9.5rem;
  justify-content: flex-start;
  gap: 1rem;
  padding-left: 1.5rem;
}

.selected {
  /* background-color: #fff;
  color: #000;
  transition: background-color 1s ease-out;
  background-color: var(--orangeButton); */
  animation-name: animate;
  animation-duration: 2s; 
}

@keyframes animate {
  0%   {background-color: var(--orangeButton);color: #fff;}
  25%  {background-color: #fff;color: #000}
  50%  {background-color: #fff;color: #000}
  100% {background-color: var(--orangeButton);color: #fff;}
}

.message {
 margin-top: 2rem;
 color: var(--grayButton);
}

.background {
  display: none;
  background-color: rgba(0, 0, 0, 0.8);
  /* position: absolute; */
  top:0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100vw-10;
  height: 100vh-10;
}

.popUp {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: .5rem;
  background-color: var(--grayButton);
  position: inherit;
  top:0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 200px;
  height: 450px;
  margin:auto;
  border-radius: 10px;
  box-shadow: 5px 5px 15px 5px #ff8080, -5px 5px 15px 5px #ffe488;
  padding: 2rem;
  font-size: .9rem;
}

.show {
  display: block;
  position: absolute;
}

@media screen and (max-height: 790px) {
  .phone {
    height: 85vh;
  }
  .topBar {
    margin-bottom: 0px;
  }

  .outputDisplay {
    padding: 0px;
    font-size: 3rem;
    line-height: 100px;
    height: auto;
  }
}

.footer {
  background-color: rgba(0, 0, 0, 0.8);
  width: 100%;
  text-align: center;
  padding-top: 5px;
}

a, a:visited {
  color: var(--grayButton);
  text-decoration: none;
}

a:hover{
  color: var(--orangeButton);
}

